<resources>
    <string name="app_name">WJ-Construction</string>
    <string name="add_masonry_name">Masonry Name</string>
    <string name="add_masonry_address">Masonry Address</string>
    <string name="add_masonry_nic">Masonry Nic</string>
    <string name="add_masonry_age">Masonry Age</string>
    <string name="add_site_charge_in_supervisor">Site Charge in Supervisor</string>
    <string name="add_add_masonry">Add Masonry</string>
    <string name="update_delete_supervisor_username">Supervisor Username</string>
    <string name="update_delete_supervisor_email">Supervisor Email</string>
    <string name="update_delete_password">Password</string>
    <string name="update_delete_confirm_password">Confirm Password</string>
    <string name="update_delete_delete">Delete</string>
    <string name="update_delete_update">Update</string>
    <string name="update_delete_masonry_name">Masonry Name</string>
    <string name="update_delete_masonry_address">Masonry Address</string>
    <string name="update_delete_masonry_nic">Masonry NIC</string>
    <string name="update_delete_masonry_age">Masonry Age</string>
    <string name="update_delete_site_charge_in_supervisor">Site Charge in Supervisor</string>
    <string name="add_supervisor_username">Supervisor Username</string>
    <string name="add_supervisor_email">Supervisor Email</string>
    <string name="add_password">Password</string>
    <string name="add_confirm_password">Confirm Password</string>
    <string name="add_add_supervisor">Add Supervisor</string>
    <string name="add_site_name">Site Name</string>
    <string name="add_site_location">Site Location</string>
    <string name="add_add_site">Add Site</string>
    <string name="add_add_construction_site">Add Construction Site</string>
    <string name="masonry_name">Masonry Name</string>
    <string name="masonry_address">Masonry Address</string>
    <string name="masonry_nic">Masonry NIC</string>
    <string name="masonry_age">Masonry Age</string>
    <string name="site_charge_in_supervisor">Site Charge in Supervisor</string>
    <string name="supervisor_username">Supervisor Username</string>
    <string name="supervisor_email">Supervisor Email</string>
    <string name="delete_masonry">Delete Masonry</string>
    <string name="delete_supervisor">Delete Supervisor</string>
    <string name="delete_all">Delete All</string>
    <string name="add">Add</string>
    <string name="add_construction_site">Add Construction Site</string>
    <string name="delete">Delete</string>
    <string name="view">View</string>
    <string name="supervisor_masonry">Supervisor , Masonry</string>
    <string name="edit_masonry">Edit Masonry</string>
    <string name="don_t_have_account">Don’t have Account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="edit_supervisor">Edit Supervisor</string>
    <string name="masonry">MASONRY</string>
    <string name="view_masonry">View Masonry</string>
    <string name="view_supervisor">View Supervisor</string>
    <string name="no_data_found">No Data Found.</string>
    <string name="masonry_username">Masonry Username</string>
    <string name="mark_attendance">Mark Attendance</string>
    <string name="w_j_consractors_pvt">W J Consractors PVT</string>
    <string name="committed_to_superior_quality_and_results">Committed to superior quality and results.</string>
    <string name="todo">TODO</string>
    <string name="welcome">Welcome ,</string>
    <string name="ssupervisor">Supervisor</string>
    <string name="mmasonry">Masonry</string>
    <string name="add_update_delete">Add,Update,Delete</string>
    <string name="attendance">Attendance</string>
    <string name="mark_attendence">Mark Attendence</string>
    <string name="salary">Salary</string>
    <string name="calculate_monthly_salary">Calculate Monthly Salary</string>
    <string name="log_out">Log Out</string>
    <string name="username">Username</string>
    <string name="sign_in">SIGN IN</string>
    <string name="are_you_sure_you_want_to_log_out">Are You Sure you want to Log Out?</string>
    <string name="yes">Yes</string>
    <string name="we_re_all_over_the_place">We\'re all over the place.</string>
    <string name="w_j_construction_inc_is_a_national_n_construction_company_specializing_in_n_general_contracting_construction_management_n_design_build_and_self_performing_n_walls_and_ceilings_services_throughout_n_our_history_we_ve_succeeded_by_providing_n_a_wide_range_of_construction_n_solutions_to_our_clients_and_delivering_a_whole_n_lot_of_quality_work">W J Construction, Inc is a national \n construction company specializing in \n general contracting, construction management, \n design-build, and self-performing \n walls and ceilings services. Throughout \n our history, we’ve succeeded by providing \n a wide range of construction \n solutions to our clients and delivering a whole \n lot of quality work.</string>
    <string name="family_owned_nationally_known">Family-owned, nationally known.</string>
    <string name="we_are_a_family_owned_commercial_n_construction_management_firm_with_a_mission_n_to_deliver_on_our_promises_for_over_40_years_n_through_collaboration_and_expertise_n_we_have_guided_our_clients_through_the_n_construction_process_to_turn_their_n_vision_into_reality_we_operate_as_a_family_with_a_commitment_to_n_construct_buildings_that_are_measured_on_n_quality_and_value_we_have_stayed_true_to_our_n_humble_beginnings_and_believe_n_clients_continue_to_choose_us_n_because_of_our_experience_and_the_greater_value_we_provide_n_beginning_in_preconstruction_we_take_n_an_integrated_approach_that_supports_the_design_n_phase_allowing_a_seamless_transition_from_n_the_conceptual_phase_into_n_construction_our_family_atmosphere_has_been_integral_n_in_establishing_new_industry_relationships_n_as_we_have_expanded_our_n_office_location_and_our_body_of_work_n_our_way_of_connecting_with_others_n_continues_to_be_one_on_one_person_to_person_n">We are a family-owned commercial \n construction management firm with a mission \n to deliver on our promises. For over 40 years, \n through collaboration and expertise, \n we have guided our clients through the \n construction process to turn their \n vision into reality. We operate as a family with a commitment to \n construct buildings that are measured on \n quality and value. We have stayed true to our \n humble beginnings and believe \n clients continue to choose us \n because of our experience and the greater value we provide.\n Beginning in preconstruction, we take \n an integrated approach that supports the design \n phase allowing a seamless transition from \n the conceptual phase into \n construction. Our family atmosphere has been integral \n in establishing new industry relationships \n as we have expanded our \n office location and our body of work. \n Our way of connecting with others \n continues to be one-on-one, person-to-person.\n</string>
    <string name="w_j_constractor_pvt">W J Constractor PVT</string>
    <string name="administrator">ADMINISTRATOR</string>
    <string name="supervisor">SUPERVISOR</string>
    <string name="address">Address</string>
    <string name="nic">NIC</string>
    <string name="age">Age</string>
    <string name="supervisor_name">Supervisor name</string>
    <string name="site">Site</string>
    <string name="location">Location</string>
    <string name="textview">TextView</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="_1">1</string>
    <string name="name">Name</string>
    <string name="clear_month_attendance">End Month</string>
    <string name="calculate_salary">Calculate Salary</string>
    <string name="calcuate_salary">Calcuate Salary</string>
    <string name="working_days">Working Days</string>
</resources>